SET(LIBRARY_NAME msglib)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR} 
    ${FASTDDS_INCL_DIR}
)

SET(LIBRARY_INCLUDES receive.h transmit.h messagetype.h)
SET(LIBRARY_SOURCES msglib.cxx)


ADD_LIBRARY(${LIBRARY_NAME} 
    ${LIBRARY_INCLUDES}
    ${LIBRARY_SOURCES}
)

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC  
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${FASTDDS_INCL_DIR}
)

TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${MSG_LIBRARIES} fastrtps fastcdr foonathan_memory)

SET_TARGET_PROPERTIES (${LIBRARY_NAME} PROPERTIES FOLDER ${PROJECT_NAME})

